Sun Jun  6 10:44:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_product): need to set the length in order to get
	  the entries marked.  [ruby-dev:41540]

Sun Jun  6 08:26:01 2010  Tanaka Akira  <akr@fsij.org>

	* vm.c (Init_BareVM): call Init_native_thread here.

	* thread.c (Init_Thread): don't call Init_native_thread.

	* thread_pthread.c (Init_native_thread): exported.

	* thread_win32.c (Init_native_thread): ditto.

	[ruby-dev:41536]

Sun Jun  6 08:21:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* NEWS: Enumerable#join has been reverted.  [ruby-core:30604]

Sat Jun  5 20:30:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_expr_str): ASCII incompatible strings
	  must always escape or converted.

	* re.c (rb_reg_expr_str): use rb_str_buf_cat_escaped_char
	  when resenc is given: for Regexp#inspect or error message.

	  * re.c (rb_reg_desc): add 'n' for ENCODING_NONE.

Sat Jun  5 01:20:14 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (sym_inspect): Escape when the symbol is not
	  resulted encoding and not ascii_only. It had escaped
	  ascii-incompatible string, but it is wrong.

Sat Jun  5 01:10:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_buf_cat_escaped_char): defined.
	  Splited from rb_str_inspect.

Sat Jun  5 16:39:13 2010  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): show type name for RTypedData.

Sat Jun  5 15:59:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options, load_file_internal): $0 seen from
	  required libraries by -r option should be the main script.
	  [ruby-core:23717]

Sat Jun  5 15:15:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): support for child
	  process env.

Sat Jun  5 14:11:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/net/imap/test_imap.rb (test_exception_during_shutdown):
	  need to raise always.

Sat Jun  5 13:13:30 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
